Fixed text wrapping bug in picker group

--- a/src/chi/components/picker/picker-groups.scss
+++ b/src/chi/components/picker/picker-groups.scss
@@ -52,7 +52,6 @@
               border-bottom-width: 0.0625rem;
               border-right-width: 0;
               flex: 1 0 0;
-              white-space: nowrap;
             }
 
             &:first-of-type {
